2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amcheck.8.xml, man/xml-source/amfetchdump.8.xml,
	  man/xml-source/amflush.8.xml,
	  man/xml-source/amrestore.8.xml: Fix order of -o argument.
	* restore-src/amfetchdump.c, restore-src/amrestore.c,
	  server-src/amcheck.c,
	  server-src/amflush.c: Fix order of -o argument in usage function.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.8.xml: Document [...] and [!...] in host & disk
				       expression section.

2009-04-28  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: remove checks for PG-DATADIR

2009-04-27  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: lowercase property names when accessing them

2009-04-27  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: fix debug printing of property names,
	  add parent directory checks to selfcheck command,
	  check psql binary path, fix whitespace
	* perl/Amanda/Application.swg: update usage docs
	* installcheck/Installcheck/Application.pm: fix formatting tags
	  remove 'level' argument from selfcheck command
	* installcheck/ampgsql.pl: test selfcheck command a bit

2009-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Remove "Usage of fully qualified hostname
	  recommended for Client" warning.

2009-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Use device if specified.

2009-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fix dbprintf statements.

2009-04-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl: Add LANG property.
	* man/xml-source/amsuntar.8.xml: Document LANG property.

2009-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl: Fix order of $ext_attrib and $ext_header,
	  add strange regex for UTF-8, estimate fail only if an output match
	  an error regex or if an output match nothing.
